--- a/about/index.html
+++ b/about/index.html
@@ -144,11 +144,11 @@
                   <a href="/contact" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item nav-item-cta">
-                  <a href="tel:+19342185862" class="btn btn-primary btn-cta">
+                  <a href="tel:+447413339937" class="btn btn-primary btn-cta">
                     <span class="icon">
                       <i class="fa-solid fa-phone"></i>
                     </span>
-                    +1934-218-5862
+                    +44-741-333-9937
                   </a>
                 </li>
               </ul>
@@ -1062,7 +1062,7 @@
                 <p class="footer-text">
                   Sparkpro Cleaning Limited delivers expert care, exceptional service, and meticulous attention to detail for every cleaning task—residential, commercial, or specialized.
                 </p>
-                <ul class="list-social">
+                <!-- <ul class="list-social">
                   <li>
                     <a href="https://facebook.com/" class="social-link">
                       <i class="fa-brands fa-facebook-f"></i>
@@ -1083,7 +1083,7 @@
                       <i class="fa-brands fa-instagram"></i>
                     </a>
                   </li>
-                </ul>
+                </ul> -->
               </div>
               <div
                 class="grid-item wow animate__fadeInUp"
@@ -1093,16 +1093,17 @@
                 <ul class="list-contact">
                   <li>
                     <address>
-                      10845 Griffith Peak Dr, Las Vegas, NV 89135
+                      707 the silver yard 100 moor street Queensway, B4 6GF, Birmingham
                     </address>
                   </li>
                   <li>
-                    <a href="tel:+19342185862">+1934 218 5862</a>
+                    <a href="tel:+447413339937">+44-741-333-9937</a>
                   </li>
                   <li>
-                    <a href="mailto:info@sparkpro.co.uk"
-                      >info@sparkpro.co.uk</a
-                    >
+                    <a href="mailto:info@sparkprocleaning.co.uk">info@sparkprocleaning.co.uk</a>
+                  </li>
+                  <li>
+                    <a href="mailto:support@sparkprocleaning.co.uk">support@sparkprocleaning.co.uk</a>
                   </li>
                 </ul>
               </div>
