--- a/contact/index.html
+++ b/contact/index.html
@@ -144,11 +144,11 @@
                   <a href="/contact" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item nav-item-cta">
-                  <a href="tel:+19342185862" class="btn btn-primary btn-cta">
+                  <a href="tel:+447413339937" class="btn btn-primary btn-cta">
                     <span class="icon">
                       <i class="fa-solid fa-phone"></i>
                     </span>
-                    +1934-218-5862
+                    +44-741-333-9937
                   </a>
                 </li>
               </ul>
@@ -242,7 +242,7 @@
                   <input
                     type="hidden"
                     name="access_key"
-                    value="f99ae08d-81b5-4d86-bb26-4330161ffa4e"
+                    value="dff654e7-a116-4af4-bf4b-096cf8960249"
                   />
                   <input
                     type="hidden"
@@ -301,7 +301,7 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="serviceType" class="form-label"
-                        >Service Type</label
+                        >Which Service?</label
                       >
                       <select
                         name="serviceType"
@@ -309,12 +309,23 @@
                         class="form-select"
                       >
                         <option value="0" hidden selected>
-                          Select Service Type
+                          Select Service 
                         </option>
-                        <option value="1">Purchase a property</option>
-                        <option value="2">Invest in a property</option>
-                        <option value="3">Save for a property</option>
-                        <option value="4">General enqiries.</option>
+                        <option value="Residential cleaning">Residential cleaning</option>
+                        <option value="Commercial cleaning">Commercial cleaning</option>
+                        <option value="Post-construction cleaning">Post-construction cleaning</option>
+                        <option value="Carpet and upholstery cleaning">Carpet and upholstery cleaning</option>
+                        <option value="Window cleaning">Window cleaning</option>
+                        <option value="Eco-friendly cleaning">Eco-friendly cleaning</option>
+                        <option value="Disinfection service">Disinfection service</option>
+                        <option value="Trash removal">Trash removal</option>
+                        <option value="Air duct cleaning">Air duct cleaning</option>
+                        <option value="Organisation services">Organisation services</option>
+                        <option value="Laundry and linen service">Laundry and linen service</option>
+                        <option value="Pet cleaning services.">Pet cleaning services.</option>
+                        <option value="Short-term rental cleaning">Short-term rental cleaning</option>
+                        <option value="Event cleaning">Event cleaning</option>
+                        <option value="General enqiries.">General enqiries.</option>
                       </select>
                     </div>
                   </div>
@@ -505,16 +516,16 @@
                     <div>
                       <h4 class="h5">Contact By</h4>
                       <p class="contact-info-desc">
-                        <a href="mailto:info@sparkpro.co.uk">
-                          info@sparkpro.co.uk
+                        <a href="mailto:info@sparkprocleaning.co.uk">
+                          info@sparkprocleaning.co.uk
                         </a>
                         <a
-                          href="mailto:info@sparkpro.co.uk
+                          href="mailto:support@sparkprocleaning.co.uk
                           "
                         >
-                          info@sparkpro.co.uk
+                          support@sparkprocleaning.co.uk
                         </a>
-                        <a href="tel:+19342185862"> Sales: +1934-218-5862 </a>
+                        <a href="tel:+447413339937"> Sales: +44-741-333-9937 </a>
                       </p>
                     </div>
                   </div>
@@ -581,7 +592,7 @@
                 <p class="footer-text">
                   Sparkpro Cleaning Limited delivers expert care, exceptional service, and meticulous attention to detail for every cleaning task—residential, commercial, or specialized.
                 </p>
-                <ul class="list-social">
+                <!-- <ul class="list-social">
                   <li>
                     <a href="https://facebook.com/" class="social-link">
                       <i class="fa-brands fa-facebook-f"></i>
@@ -602,7 +613,7 @@
                       <i class="fa-brands fa-instagram"></i>
                     </a>
                   </li>
-                </ul>
+                </ul> -->
               </div>
               <div
                 class="grid-item wow animate__fadeInUp"
@@ -612,16 +623,17 @@
                 <ul class="list-contact">
                   <li>
                     <address>
-                      10845 Griffith Peak Dr, Las Vegas, NV 89135
+                      707 the silver yard 100 moor street Queensway, B4 6GF, Birmingham
                     </address>
                   </li>
                   <li>
-                    <a href="tel:+19342185862">+1934 218 5862</a>
+                    <a href="tel:+447413339937">+44-741-333-9937</a>
                   </li>
                   <li>
-                    <a href="mailto:info@sparkpro.co.uk"
-                      >info@sparkpro.co.uk</a
-                    >
+                    <a href="mailto:info@sparkprocleaning.co.uk">info@sparkprocleaning.co.uk</a>
+                  </li>
+                  <li>
+                    <a href="mailto:support@sparkprocleaning.co.uk">support@sparkprocleaning.co.uk</a>
                   </li>
                 </ul>
               </div>
@@ -650,7 +662,7 @@
         <!--========= Footer Copyright: START =========-->
         <div class="footer-copyright">
           <div class="container">
-            <p>Copyright Block Haven Real-Estate. All Rights Reserved.</p>
+            <p>Copyright Sparkpro Cleaning Limited. All Rights Reserved.</p>
           </div>
         </div>
         <!--========= Footer Copyright: END =========-->
@@ -659,8 +671,6 @@
     </div>
     <!--========= App: END =========-->
 
-    <script src="../scripts/jquery.min.js"></script>
-    <script src="../scripts/jquery.ajaxchimp.min.js"></script>
     <!-- wowjs -->
     <script src="../libs/wowjs/wow.min.js"></script>
     <!-- swiper js -->
