--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                   <a href="/contact/" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item nav-item-cta">
-                  <a href="tel:+19342185862" class="btn btn-primary btn-cta">
+                  <a href="tel:+447413339937" class="btn btn-primary btn-cta">
                     <span class="icon">
                       <i class="fa-solid fa-phone"></i>
                     </span>
-                    +1934-218-5862
+                    +44-741-333-9937
                   </a>
                 </li>
               </ul>
@@ -382,7 +382,7 @@
         </section>
         <!--========= Our Values: END =========-->
 
-        <!--========= Explore Properties: START =========-->
+        <!--========= Explore Services: START =========-->
         <section class="explore-properties section">
           <div class="container">
             <div class="row g-3 align-items-center">
@@ -1153,7 +1153,7 @@
             </div>
           </div>
         </section>
-        <!--========= Explore Properties: END =========-->
+        <!--========= Explore Services: END =========-->
 
         <!--========= Our Facilities: START =========-->
         <section class="our-facilities section">
@@ -1634,7 +1634,7 @@
                       <input
                         type="hidden"
                         name="access_key"
-                        value="14ec3192-f7bf-40ce-9535-bbc21accae1e"
+                        value="dff654e7-a116-4af4-bf4b-096cf8960249"
                       />
                       <input
                         type="hidden"
@@ -1674,6 +1674,61 @@
                           class="form-control"
                           placeholder="Phone Number"
                         />
+                      </div>
+                      <div class="form-group">
+                        <label for="serviceType" class="form-label"
+                          >Which Service?</label
+                        >
+                        <select
+                          name="serviceType"
+                          id="serviceType"
+                          class="form-select"
+                        >
+                          <option value="0" hidden selected>
+                            Select Service
+                          </option>
+                          <option value="Residential cleaning">
+                            Residential cleaning
+                          </option>
+                          <option value="Commercial cleaning">
+                            Commercial cleaning
+                          </option>
+                          <option value="Post-construction cleaning">
+                            Post-construction cleaning
+                          </option>
+                          <option value="Carpet and upholstery cleaning">
+                            Carpet and upholstery cleaning
+                          </option>
+                          <option value="Window cleaning">
+                            Window cleaning
+                          </option>
+                          <option value="Eco-friendly cleaning">
+                            Eco-friendly cleaning
+                          </option>
+                          <option value="Disinfection service">
+                            Disinfection service
+                          </option>
+                          <option value="Trash removal">Trash removal</option>
+                          <option value="Air duct cleaning">
+                            Air duct cleaning
+                          </option>
+                          <option value="Organisation services">
+                            Organisation services
+                          </option>
+                          <option value="Laundry and linen service">
+                            Laundry and linen service
+                          </option>
+                          <option value="Pet cleaning services.">
+                            Pet cleaning services.
+                          </option>
+                          <option value="Short-term rental cleaning">
+                            Short-term rental cleaning
+                          </option>
+                          <option value="Event cleaning">Event cleaning</option>
+                          <option value="General enqiries.">
+                            General enqiries.
+                          </option>
+                        </select>
                       </div>
                       <div class="form-group">
                         <label for="message" class="form-label">Message</label>
@@ -1746,7 +1801,7 @@
                   service, and meticulous attention to detail for every cleaning
                   task—residential, commercial, or specialized.
                 </p>
-                <ul class="list-social">
+                <!-- <ul class="list-social">
                   <li>
                     <a href="https://facebook.com/" class="social-link">
                       <i class="fa-brands fa-facebook-f"></i>
@@ -1767,7 +1822,7 @@
                       <i class="fa-brands fa-instagram"></i>
                     </a>
                   </li>
-                </ul>
+                </ul> -->
               </div>
               <div
                 class="grid-item wow animate__fadeInUp"
@@ -1777,14 +1832,17 @@
                 <ul class="list-contact">
                   <li>
                     <address>
-                      10845 Griffith Peak Dr, Las Vegas, NV 89135
+                      707 the silver yard 100 moor street Queensway, B4 6GF, Birmingham
                     </address>
                   </li>
                   <li>
-                    <a href="tel:+19342185862">+1934 218 5862</a>
+                    <a href="tel:+447413339937">+44-741-333-9937</a>
                   </li>
                   <li>
-                    <a href="mailto:info@sparkpro.co.uk">info@sparkpro.co.uk</a>
+                    <a href="mailto:info@sparkprocleaning.co.uk">info@sparkprocleaning.co.uk</a>
+                  </li>
+                  <li>
+                    <a href="mailto:support@sparkprocleaning.co.uk">support@sparkprocleaning.co.uk</a>
                   </li>
                 </ul>
               </div>
