--- a/services/index.html
+++ b/services/index.html
@@ -137,7 +137,7 @@
                 </li>
                 <li class="nav-item active">
                   <a href="property-listing.html" class="nav-link"
-                    >Properties</a
+                    >Services</a
                   >
                 </li>
                 <li class="nav-item">
@@ -147,11 +147,11 @@
                   <a href="/contact/" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item nav-item-cta">
-                  <a href="tel:+19342185862" class="btn btn-primary btn-cta">
+                  <a href="tel:+447413339937" class="btn btn-primary btn-cta">
                     <span class="icon">
                       <i class="fa-solid fa-phone"></i>
                     </span>
-                    +1934-218-5862
+                    +44-741-333-9937
                   </a>
                 </li>
               </ul>
@@ -230,7 +230,7 @@
         </section>
         <!--========= Hero Section: END =========-->
 
-        <!--========= Explore Properties: START =========-->
+        <!--========= Explore Services: START =========-->
         <section class="explore-properties section">
           <div class="container">
             <p
@@ -978,7 +978,7 @@
             </div>
           </div>
         </section>
-        <!--========= Explore Properties: END =========-->
+        <!--========= Explore Services: END =========-->
 
       </main>
       <!--========= Main Sections: END =========-->
@@ -997,7 +997,7 @@
               <p class="footer-text">
                 Sparkpro Cleaning Limited delivers expert care, exceptional service, and meticulous attention to detail for every cleaning task—residential, commercial, or specialized.
               </p>
-              <ul class="list-social">
+              <!-- <ul class="list-social">
                 <li>
                   <a href="https://facebook.com/" class="social-link">
                     <i class="fa-brands fa-facebook-f"></i>
@@ -1018,29 +1018,30 @@
                     <i class="fa-brands fa-instagram"></i>
                   </a>
                 </li>
-              </ul>
+              </ul> -->
             </div>
             <div
-              class="grid-item wow animate__fadeInUp"
-              data-wow-duration="1s"
-            >
-              <h2 class="h4 text-uppercase">Contact</h2>
-              <ul class="list-contact">
-                <li>
-                  <address>
-                    10845 Griffith Peak Dr, Las Vegas, NV 89135
-                  </address>
-                </li>
-                <li>
-                  <a href="tel:+19342185862">+1934 218 5862</a>
-                </li>
-                <li>
-                  <a href="mailto:info@sparkpro.co.uk"
-                    >info@sparkpro.co.uk</a
-                  >
-                </li>
-              </ul>
-            </div>
+                class="grid-item wow animate__fadeInUp"
+                data-wow-duration="1s"
+              >
+                <h2 class="h4 text-uppercase">Contact</h2>
+                <ul class="list-contact">
+                  <li>
+                    <address>
+                      707 the silver yard 100 moor street Queensway, B4 6GF, Birmingham
+                    </address>
+                  </li>
+                  <li>
+                    <a href="tel:+447413339937">+44-741-333-9937</a>
+                  </li>
+                  <li>
+                    <a href="mailto:info@sparkprocleaning.co.uk">info@sparkprocleaning.co.uk</a>
+                  </li>
+                  <li>
+                    <a href="mailto:support@sparkprocleaning.co.uk">support@sparkprocleaning.co.uk</a>
+                  </li>
+                </ul>
+              </div>
             <div
               class="grid-item wow animate__fadeInUp"
               data-wow-duration="1s"
