update about page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Sparkling Spaces, Smiling Faces.</title>
+    <meta
+      name="description"
+      content="Sparkpro Cleaning Limited delivers expert care, exceptional
+      service, and meticulous attention to detail for every cleaning
+      task—residential, commercial, or specialized."
+    />
+    <meta
+      name="keywords"
+      content="Sparkpro Cleaning Limited delivers expert care, exceptional
+      service, and meticulous attention to detail for every cleaning
+      task—residential, commercial, or specialized."
+    />
+    <link rel="canonical" href="https://sparkprocleaning.co.uk/" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="https://sparkprocleaning.co.uk/" />
+    <!-- Open Graph Tags -->
+    <meta
+      property="og:title"
+      content="Sparkpro Cleaning - Sparkling Spaces, Smiling Faces."
+    />
+    <meta
+      property="og:description"
+      content="Sparkpro Cleaning Limited delivers expert care, exceptional
+      service, and meticulous attention to detail for every cleaning
+      task—residential, commercial, or specialized."
+    />
+    <meta
+      property="og:image"
+      content="https://sparkpro.vercel.app/assets/images/home/who-we-are/homee.jpg"
+    />
+    <meta property="og:url" content="https://sparkprocleaning.co.uk/" />
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Sparkpro Cleaning - Sparkling Spaces, Smiling Faces."
+    />
+    <meta
+      name="twitter:description"
+      content="Sparkpro Cleaning Limited delivers expert care, exceptional
+      service, and meticulous attention to detail for every cleaning
+      task—residential, commercial, or specialized."
+    />
+    <meta
+      name="twitter:image"
+      content="https://sparkpro.vercel.app/assets/images/home/who-we-are/homee.jpg"
+    />
     <!-- favicon -->
     <link
       rel="apple-touch-icon"
@@ -1832,17 +1879,22 @@
                 <ul class="list-contact">
                   <li>
                     <address>
-                      707 the silver yard 100 moor street Queensway, B4 6GF, Birmingham
+                      707 the silver yard 100 moor street Queensway, B4 6GF,
+                      Birmingham
                     </address>
                   </li>
                   <li>
                     <a href="tel:+447413339937">+44-741-333-9937</a>
                   </li>
                   <li>
-                    <a href="mailto:info@sparkprocleaning.co.uk">info@sparkprocleaning.co.uk</a>
+                    <a href="mailto:info@sparkprocleaning.co.uk"
+                      >info@sparkprocleaning.co.uk</a
+                    >
                   </li>
                   <li>
-                    <a href="mailto:support@sparkprocleaning.co.uk">support@sparkprocleaning.co.uk</a>
+                    <a href="mailto:support@sparkprocleaning.co.uk"
+                      >support@sparkprocleaning.co.uk</a
+                    >
                   </li>
                 </ul>
               </div>
