--- a/contact/index.html
+++ b/contact/index.html
@@ -392,8 +392,8 @@
         <section class="contact-info section">
           <div class="container">
             <div class="inner-content">
-              <div class="row g-3">
-                <div
+              <div class="row align-items-center justify-content-center g-3">
+                <!-- <div
                   class="col-md-6 col-lg-4 wow animate__fadeInLeft"
                   data-wow-duration="1s"
                 >
@@ -501,9 +501,9 @@
                       </p>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <div
-                  class="col-md-6 col-lg-4 wow animate__fadeInUp"
+                  class="col-md-6 col-lg-6 w-fit px-4 wow animate__fadeInUp"
                   data-wow-duration="1s"
                 >
                   <div class="contact-info-item">
@@ -561,7 +561,7 @@
                   </div>
                 </div>
                 <div
-                  class="col-lg-4 wow animate__fadeInRight"
+                  class="col-md-6 col-lg-6 w-fit px-4 wow animate__fadeInRight"
                   data-wow-duration="1s"
                 >
                   <div class="contact-info-item">
