--- a/contact/index.html
+++ b/contact/index.html
@@ -600,6 +600,17 @@
           </div>
         </section>
         <!--========= Contact Info: END =========-->
+        <!--========= Contact Info: START =========-->
+        <section class="section">
+          <div class="container">
+            <div class="col-lg-12">
+              <div class="card p-2">
+                <iframe class="map-width" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d453.59222137417413!2d-1.8917103443346424!3d52.48170075829927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4870bd9fb0b455bd%3A0xb05ed6f97da33885!2sThe%20Silver%20Yard!5e1!3m2!1sen!2sng!4v1733412743664!5m2!1sen!2sng" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--========= Contact Info: END =========-->
       </main>
       <!--========= Main Sections: END =========-->
 
