updated the testimnial section

--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@
                       data-wow-duration="1s"
                     >
                       <div class="clients-testimonial-item">
-                        <div class="clients-testimonial-avatar">
+                        <!-- <div class="clients-testimonial-avatar">
                           <img
                             src="assets/images/home/clients-testimonial/client-slide.png"
                             alt="Client"
@@ -1396,7 +1396,7 @@
                             height="140"
                             class="img-fluid"
                           />
-                        </div>
+                        </div> -->
                         <span class="icon">
                           <svg
                             width="99"
@@ -1431,7 +1431,7 @@
                       data-wow-duration="1s"
                     >
                       <div class="clients-testimonial-item">
-                        <div class="clients-testimonial-avatar">
+                        <!-- <div class="clients-testimonial-avatar">
                           <img
                             src="assets/images/home/clients-testimonial/client-00.webp"
                             alt="Client"
@@ -1439,7 +1439,7 @@
                             height="140"
                             class="img-fluid rounded-full"
                           />
-                        </div>
+                        </div> -->
                         <span class="icon">
                           <svg
                             width="99"
@@ -1472,7 +1472,7 @@
                       data-wow-duration="1s"
                     >
                       <div class="clients-testimonial-item">
-                        <div class="clients-testimonial-avatar">
+                        <!-- <div class="clients-testimonial-avatar">
                           <img
                             src="assets/images/home/clients-testimonial/client-slide.png"
                             alt="Client"
@@ -1480,7 +1480,7 @@
                             height="140"
                             class="img-fluid"
                           />
-                        </div>
+                        </div> -->
                         <span class="icon">
                           <svg
                             width="99"
@@ -1518,7 +1518,7 @@
                       data-wow-duration="1s"
                     >
                       <div class="clients-testimonial-item">
-                        <div class="clients-testimonial-avatar">
+                        <!-- <div class="clients-testimonial-avatar">
                           <img
                             src="assets/images/home/clients-testimonial/client-02.png"
                             alt="Client"
@@ -1526,7 +1526,7 @@
                             height="140"
                             class="img-fluid"
                           />
-                        </div>
+                        </div> -->
                         <span class="icon">
                           <svg
                             width="99"
