images in testimonial section changed

--- a/index.html
+++ b/index.html
@@ -1330,11 +1330,11 @@
                     style="background-color: #fff4e6"
                   >
                     <img
-                      src="assets/images/home/clients-testimonial/client-01.png"
+                      src="assets/images/home/clients-testimonial/client-01.webp"
                       alt="Client"
                       width="64"
                       height="64"
-                      class="img-fluid"
+                      class="img-fluid rounded-full"
                     />
                   </div>
                   <div
@@ -1369,11 +1369,11 @@
                     style="background-color: #ddfcff"
                   >
                     <img
-                      src="assets/images/home/clients-testimonial/client-04.png"
+                      src="assets/images/home/clients-testimonial/client-02.webp"
                       alt="Client"
                       width="64"
                       height="64"
-                      class="img-fluid"
+                      class="img-fluid rounded-full"
                     />
                   </div>
                 </div>
