--- a/about/index.html
+++ b/about/index.html
@@ -1355,28 +1355,18 @@
                   service, and meticulous attention to detail for every cleaning
                   task—residential, commercial, or specialized.
                 </p>
-                <!-- <ul class="list-social">
+                <ul class="list-social">
                   <li>
-                    <a href="https://facebook.com/" class="social-link">
-                      <i class="fa-brands fa-facebook-f"></i>
+                    <a href="https://www.facebook.com/profile.php?id=61571573150169&mibextid=wwXIfr&rdid=OH7gMOF3lZBLe4p6&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F185kD3uSyg%2F%3Fmibextid%3DwwXIfr#" class="social-link" target="_blank">
+                      <i class="fa-brands fa-facebook"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="https://twitter.com/" class="social-link">
-                      <i class="fa-brands fa-twitter"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="https://facebook.com/" class="social-link">
-                      <i class="fa-brands fa-linkedin-in"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="https://facebook.com/" class="social-link">
+                    <a href="https://www.instagram.com/sparkprocleaning_/profilecard/?igsh=MXh6dW81M3g0aGZ5MQ%3D%3D" class="social-link" target="_blank">
                       <i class="fa-brands fa-instagram"></i>
                     </a>
                   </li>
-                </ul> -->
+                </ul>
               </div>
               <div
                 class="grid-item wow animate__fadeInUp"
