--- a/contact/index.html
+++ b/contact/index.html
@@ -654,8 +654,8 @@
                 <ul class="list-contact">
                   <li>
                     <address>
-                      707 the silver yard 100 moor street Queensway, B4 6GF,
-                      Birmingham
+                      124 city road London
+EC1V 2NX
                     </address>
                   </li>
                   <li>
